#5137 fix + shlomi's request on nowrap for "add file" in box

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -244,6 +244,7 @@
         font-size: 18px;
         // color: @textColorGrey;
         text-align: center;
+        white-space: nowrap;
     }
 
     svg {
