--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.rtl.css
@@ -184,6 +184,7 @@
 .add-button button {
   font-size: 18px;
   text-align: center;
+  white-space: nowrap;
 }
 .add-button svg {
   width: 40px;
